# M200_4G_RF

./: .gitignore  CMakeLists.txt  blesppserverdemo.gbl  merge_bin_esp.py  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  sdkconfig.old
main/: AT_CMD_List.h  CMakeLists.txt  EG91.c  EG91.h  Kconfig.projbuild  UDP_Codes.c  UDP_Codes.h  ble_spp_server_demo.c  ble_spp_server_demo.h  ccronexpr.c  cmd_list.h  core.c  core.h  crc32.c  crc32.h  cron.c  cron.h  erro_list.h  gpio.c  gpio.h  inputs.c  inputs.h  jobs.c  keeloqDecrypt.c  keeloqDecrypt.h  list.c  list.h  logger.h  nvs.h  nvs_data.csv  pcf85063.c  pcf85063.h  rele.c  rele.h  rf.c  rf.h  routines.c  routines.h  sdCard.c  sdCard.h  (+12 more)
main/languages/: pt.json
mkspiffs/: out.list0  out.list_u  out.spiffs_t
mkspiffs/include/: spiffs_config.h
mkspiffs/mkspiffs-0.2.3-7-gf248296-arduino-esp32-linux64/: mkspiffs
mkspiffs/mkspiffs-0.2.3-7-gf248296-arduino-esp8266-linux64/: mkspiffs
mkspiffs/mkspiffs-0.2.3-7-gf248296-esp-idf-linux64/: mkspiffs
mkspiffs/mkspiffs-0.2.3-7-gf248296-generic-linux64/: mkspiffs
mkspiffs/spiffs/: files.mk
mkspiffs/spiffs/src/: spiffs.h  spiffs_hydrogen.c  spiffs_nucleus.h
mkspiffs/spiffs/src/default/: spiffs_config.h
mkspiffs/spiffs/src/test/: params_test.h  test_bugreports.c  test_check.c  test_dev.c  test_hydrogen.c  test_spiffs.c  testrunner.c  testrunner.h
